First raw version of a Philips Hue service via gRPC

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.dll
 *.so
 *.dylib
+build/homecontrol*
 
 # Test binary, build with `go test -c`
 *.test
@@ -12,3 +13,7 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+vendor/
+
+# Protobuf generates files
+*.pb.go
