--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,11 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/master/containers/go
 {
     "name": "IoT Homecontrol",
-    "dockerFile": "Dockerfile",
+    "dockerComposeFile": [
+        "docker-compose.yaml"
+    ],
+    "service": "homecontrol",
+    "workspaceFolder": "/workspaces",
     "runArgs": [
         "--cap-add=SYS_PTRACE",
         "--security-opt",
@@ -14,9 +18,6 @@
         "terminal.integrated.shell.linux": "/bin/zsh",
         "go.gopath": "/go"
     },
-    "mounts": [
-        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.philips-hue.json,target=/home/vscode/.philips-hue.json,type=bind,consistency=cached"
-    ],
     // Use 'appPort' to create a container with published ports. If the port isn't working, be sure
     // your server accepts connections from all interfaces (0.0.0.0 or '*'), not just localhost.
     // "appPort": [],
