--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,6 +30,7 @@
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
         "ms-vscode.go",
-        "golang.go"
+        "golang.go",
+        "bierner.markdown-mermaid"
     ]
 }
