--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,14 +11,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.19
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-
+          go-version-file: 'go.mod'
       - name: Build
         run: make build-only
