--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
     "name": "IoT Homecontrol",
     "dockerComposeFile": [
-        "docker-compose.yaml"
+        "compose.yaml"
     ],
     "service": "homecontrol",
     "workspaceFolder": "/workspaces",
